se corrigio login y cierre de session junto con el crear usuarios

--- a/app/index.html
+++ b/app/index.html
@@ -181,7 +181,7 @@
 		</div>
 		<div role="main" class="ui-content">
 			        <div class="article">
-				            <p><img src="../_assets/img/bike.jpg" alt="Fixed Gear bike"></p>
+				            <p><img  alt="Fixed Gear bike"></p>
 				            <h2>Fixed Gear</h2>
 				            <p>A fixed-gear or fixed-wheel bicycle, commonly known as a fixie, is a bicycle that has a drivetrain with no freewheel mechanism. The freewheel was developed early in the history of bicycle design but the fixed-gear bicycle remained the standard track racing design. More recently the 'fixie' has become a popular alternative among mainly urban cyclists, offering the advantages of simplicity compared with the standard multi-geared bicycle.</p>
 				            <p><small>Source: Wikipedia</small></p>
