--- a/app/index.html
+++ b/app/index.html
@@ -182,7 +182,7 @@
 		<div role="main" class="ui-content">
 			<main canvas="container" class="z-container noPadding scroll bgLightGrey p2r">
 				<br>
-				<section class="z-container mainContainer">
+				<section id="sectionPost" class="z-container mainContainer">
 					<div class="z-row">
 						<div id="postContainer" class="z-col-lg-6 z-col-md-6 z-col-sm-10 z-col-xs-12 z-col-lg-offset-3 z-col-md-offset-3 z-col-sm-offset-1 z-col-xs-offset-0">
 						</div>
@@ -265,7 +265,7 @@
 			</div>
 
 		</div>
-		<div data-role="panel" id="right-panel" data-display="push" data-position="right" class="bgLightBlue">
+		<div data-role="panel" id="right-panel"  data-position="right" class="bgLightBlue">
 			<div class="list-group bgTransparent noBorder square " id="diasSemana">
 				<button type="button" class="list-group-item cLightGrey s20 square noBorder noMargin bgTransparent searchDay" >
 					Miercoles        
@@ -294,6 +294,7 @@
 	<script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
 	<script src="plugins/owl/owl.carousel.js"></script>
 	<script src="js/jquery.validate.min.js"></script>
+	<script src="js/xpull.js"></script>
 	<script type="text/javascript" src="js/app_ini.js"></script>
 </body>
 </html>
