--- a/app/index.html
+++ b/app/index.html
@@ -17,33 +17,6 @@
 	<link href="https://fonts.googleapis.com/css?family=Monda:400,700" rel="stylesheet">
 </head>
 <body>
-	<div data-role="page" id="index">
-
-		<a href="#login" class="ui-btn ui-icon-delete ui-btn-icon-right close-splash">Skip</a>
-
-		<div id="splash" class="owl-carousel">
-			<div class="item">
-				<div style="background:url(images/bg/s00.jpg);" class="img-splash" alt="Bienvenido, este es el slide 1."></div>
-				<div class="text-splash">Bienvenido, este es el slide 1.</div> 
-			</div>
-			<div class="item">
-				<div style="background:url(images/bg/s01.jpg);" class="img-splash" alt="This is slide 2"></div>
-				<div class="text-splash">This is slide 2</div>
-			</div>
-			<div class="item">
-				<div style="background:url(images/bg/s02.jpg);" class="img-splash" alt="This is slide 3"></div>
-				<div class="text-splash">This is slide 3</div>
-			</div>
-			<div class="item">
-				<div style="background:url(images/bg/s03.jpg);" class="img-splash" alt="This is slide 4"></div>
-				<div class="text-splash">This is slide 4</div>
-			</div>
-			<div class="item">
-				<div style="background:url(images/bg/s04.jpg);" class="img-splash" alt="This is slide 5"></div>
-				<div class="text-splash z-col-lg-4 z-col-md-4 z-col-sm-4 z-col-sm-offset-0 z-col-xs-8 "><a href="#login" class="z-btn btn-rounded h50 bgGreen cWhite s20 text-center noTransform boxShadow welcomescreen-closebtn close-welcomescreen">Comienza ya</a></div>
-			</div>
-		</div>
-	</div>
 	<div data-role="page" id="login">
 		<main id="main_login">
 			<div class="bgCover"></div>
@@ -89,12 +62,12 @@
 						<form id="lognUser" class="form-section">
 							<input type="hidden" id="action" value="loginU" name="action">
 							<label for="logUser"></label>
-							<input id="logUser" type="text" class="form-control" placeholder="Usuario" name="logUser" value="">
+							<input id="logUser" type="email" placeholder="Usuario" name="logUser" value="">
 							<div class="clear"></div>
 							<label for="logPass"></label>
-							<input id="logPass" type="password" class="form-control" placeholder="Contraseña" name="logPass" value="">
+							<input id="logPass" type="password" autocomplete="off" placeholder="Contraseña" name="logPass" value="">
 							<div class="clear"></div>
-							<button type="button" id="loginU"  class="z-btn h50 btn-rounded bgGreen cWhite s20 text-center noTransform boxShadow" disabled>
+							<button type="button" id="loginU"  class="z-btn h50 btn-rounded bgGreen cWhite s20 text-center noTransform boxShadow">
 								Iniciar Sesión
 							</button>
 						</form>
@@ -124,7 +97,7 @@
 						<form id="registerUser" class="form-section">
 
 							<label for="ruMail"></label>
-							<input id="ruMail" type="text" class="form-control" placeholder="Correo" name="ruMail" value="" required>
+							<input id="ruMail" type="email" placeholder="Correo" name="ruMail" value="" required>
 
 							<div class="clear"></div>
 
@@ -132,7 +105,7 @@
 							<input id="ruPass" type="password" class="form-control" placeholder="Contraseña" name="ruPass" value="" required>
 
 							<div class="clear"></div>
-							<button type="button" id="crteAccountE" class="z-btn btn-rounded h50 bgGreen cWhite s20 text-center noTransform boxShadow" disabled>
+							<button type="button" id="crteAccountE" class="z-btn btn-rounded h50 bgGreen cWhite s20 text-center noTransform boxShadow">
 								Crear cuenta
 							</button>
 						</form>
@@ -155,8 +128,20 @@
 	<div data-role="page" id="socios">
 		asdas
 	</div>
-	<div data-role="page" id="profile">
-		asdas
+	<div data-role="page" id="editProfile">
+		<div data-role="header" data-theme="b">
+			<h1>Dialog</h1>
+		</div><!-- /header -->
+
+		<div role="main" class="ui-content">
+			<h2>Popup</h2>
+			<p>I have an id of "popup" on my page container and only look like a dialog because the link to me had a <code>data-rel="dialog"</code> attribute which gives me this inset look and a <code>data-transition="pop"</code> attribute to change the transition to pop. Without this, I'd be styled as a normal page.</p>
+			<p><a href="#one" data-rel="back" class="ui-btn ui-shadow ui-corner-all ui-btn-inline ui-icon-back ui-btn-icon-left">Back to page "one"</a></p>
+		</div><!-- /content -->
+
+		<div data-role="footer">
+			<h4>Page Footer</h4>
+		</div><!-- /footer -->
 	</div>
 	<div data-role="page" id="main">
 		<div data-role="header" role="banner"  data-position="fixed" class="ui-header ui-bar-inherit">
@@ -198,7 +183,12 @@
 					</div>
 
 				</section>
-			</main>
+			</main>			
+			<div class="fab" id="masterfab">
+				<span>
+					<i class="fa fa-search search-fixed" aria-hidden="true"></i>
+				</span>
+			</div>
 			<svg class="hidden" version="1.1" xmlns="http://www.w3.org/2000/svg">
 				<filter id="blur">
 					<feGaussianBlur stdDeviation="30" />
@@ -206,11 +196,11 @@
 			</svg>
 		</div>
 		<div data-role="panel" id="left-panel" class="bgLightBlue" data-position-fixed="true">
-			<form class="">				
+			<form class="" id="form_search">				
 				<div class="z-row">
 					<div class="z-col-lg-8 z-col-md-8 z-col-sm-8 z-col-xs-12">
 						<div class="form-section">
-							<input id="search" class="form-control square has-addon" type="text" name="search" value="" placeholder="Buscar...">
+							<input type="text" id="search" class="form-control square has-addon" type="text" name="search" value="" placeholder="Buscar..." data-clear-btn="true">
 							<button type="button" id="searchBtn" class="z-btn cWhite bgGreen s15 form-addon"><span class="fa fa-search"></span></button>
 						</div>
 					</div>
@@ -259,11 +249,8 @@
 					</a>
 					<div class="collapse" id="profile-dropdown">
 						<div class="list-group bgLightGrey noBorder square">
-							<a href="#profile" role="button" class="list-group-item cWhite s15 square noBorder noMargin bgDark">
+							<a href="#editProfile" role="button" class="list-group-item cWhite s15 square noBorder noMargin bgDark">
 								Editar Perfil (socio)
-							</a>
-							<a href="#" role="button" class="list-group-item cWhite s15 square noBorder noMargin bgDark">
-								link
 							</a>
 							<a role="button" id="logOutbtn" class="list-group-item cWhite s15 square noBorder noMargin bgDark">
 								Cerrar sesión
